# G-quant

./: .gitignore
blockchain/anchor-hcv/: Anchor.toml  README.md  package.json
blockchain/anchor-hcv/migrations/: deploy.ts
blockchain/anchor-hcv/programs/hcv_control/: Cargo.toml
blockchain/anchor-hcv/programs/hcv_control/src/: lib.rs
blockchain/anchor-hcv/scripts/: build_instruction_data.js  init_hcv_state.js  preflight_check.js  read_state.js  update_nav.js
blockchain/anchor-hcv/tests/: hcv_control.ts
docs-public/: README.md
docs-public/metadata/: hcv-devnet.json
docs/blockchain/: hcv-mainnet-checklist.md  hcv-mainnet-token-launch-order.md  hcv-readiness-report.md
