[package]
name = "hcv_control"
version = "0.1.0"
description = "G-Quant HCV control program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hcv_control"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
